--- a/public/404.html
+++ b/public/404.html
@@ -6,7 +6,7 @@
     <script>
       sessionStorage.redirect = location.href;
     </script>
-    <meta http-equiv="refresh" content="0;URL='/'">
+    <meta http-equiv="refresh" content="0;URL='/pixijs_playground/'">
   </head>
   <body>
     Redirecting...
